crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_peek__peek_struct_all_must_occur.snap
---
source: crates/csskit_derives/src/test/test_peek.rs
expression: pretty
---
#[automatically_derived]
impl<'a> ::css_parse::Peek<'a> for Params {
    fn peek<I>(p: &::css_parse::Parser<'a, I>, c: ::css_parse::Cursor) -> bool
    where
        I: ::std::iter::Iterator<Item = ::css_parse::Cursor> + ::std::clone::Clone,
    {
        use ::css_parse::Peek;
        <Ident>::peek(p, c) || <Percentage>::peek(p, c)
    }
}
