crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_peek__peek_struct_skip_field.snap
---
source: crates/csskit_derives/src/test/test_peek.rs
expression: pretty
---
#[automatically_derived]
impl<'a> ::css_parse::Peek<'a> for Foo {
    const PEEK_KINDSET: ::css_lexer::KindSet = ::css_lexer::KindSet::new(
        &[::css_lexer::Kind::Ident],
    );
}
