crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_peek__peek_struct_with_lifetime.snap
---
source: crates/csskit_derives/src/test/test_peek.rs
expression: pretty
snapshot_kind: text
---
#[automatically_derived]
impl<'a> ::css_parse::Peek<'a> for Value<'a> {
    const PEEK_KINDSET: ::css_lexer::KindSet = ::css_lexer::KindSet::new(
        &[::css_lexer::Kind::Ident],
    );
}
