crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_peek__peek_struct_with_multiple_fields.snap
---
source: crates/csskit_derives/src/test/test_peek.rs
expression: pretty
---
#[automatically_derived]
impl<'a> ::css_parse::Peek<'a> for Color {
    #[inline(always)]
    fn peek<I>(p: &::css_parse::Parser<'a, I>, c: ::css_parse::Cursor) -> bool
    where
        I: ::std::iter::Iterator<Item = ::css_parse::Cursor> + ::std::clone::Clone,
    {
        use ::css_parse::Peek;
        <CSSInt>::peek(p, c)
    }
}
