crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_peek__peek_struct_with_range.snap
---
source: crates/csskit_derives/src/test/test_peek.rs
expression: pretty
---
#[automatically_derived]
impl<'a> ::css_parse::Peek<'a> for Opacity {
    fn peek(p: &::css_parse::Parser<'a>, c: ::css_parse::Cursor) -> bool {
        use ::css_parse::Peek;
        (<Number>::peek(p, c) && (0.0..=1.0).contains(&c.token().value()))
    }
}
